--- a/src/styles/utils/sizes.scss
+++ b/src/styles/utils/sizes.scss
@@ -19,7 +19,7 @@ $font-esPeak: 'esPeak';
     line-height: 4.9rem;
 }
 
-%parag-16 {
+%parag {
     font-family: $font-esPeak;
     font-size: 2.4rem;
     line-height: 3rem;
@@ -30,7 +30,7 @@ $font-esPeak: 'esPeak';
     }
 }
 
-%label-14 {
+%label {
     font-family: $font-esPeak;
     font-size: 2rem;
     line-height: 2.4rem;
