--- a/src/views/index.pug
+++ b/src/views/index.pug
@@ -14,7 +14,8 @@ html(lang="en")
             section.home
                 .home_wrapper
                     .home_text 
-                        p| Lorem, ipsum dolor sit amet consectetur adipisicing elit. Temporibus officiis consequatur iusto accusamus praesentium eaque, a eveniet inventore quasi dolorem eius excepturi, numquam quibusdam voluptatum molestiae, error est! A, voluptatibus.
+                        p| Wellcome to my boilerplate project. 
+                        p| Make yourself comfy and start to work :)
                         
             
 
