Updating smoothscroll, template attribution setting and refactoring code

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -8,5 +8,5 @@
 @import './base/font';
 @import './base/base';
 
-@import './sections/shared';
+@import './sections/partials';
 @import './sections/home';
