--- a/src/styles/base/base.scss
+++ b/src/styles/base/base.scss
@@ -4,61 +4,36 @@
     box-sizing: border-box;
 }
 
+html, body {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
+}
+
+
 html {
     font-size: calc(100vw / 1920 * 10);
-    //? Big screen view
-    // @media (min-width: $breakpoint-bigScreen) {
-    //     font-size: 10px;
-    // }
     @media (max-width: $breakpoint-tablet) {
         font-size: calc(100vw / 769 * 10);
     }
-    // @media (max-width: $breakpoint-mobile) {
-    //     font-size: calc(100vw / 500 * 10);
-    // }
 }
 
 body {
-    // overscroll-behavior: none;
-    // scroll-behavior: none;
     background-color: $color-primary;
     color: $color-secondary;
 
-    overscroll-behavior: none;
-    scroll-behavior: none;
+    -webkit-tap-highlight-color: transparent;
+    -webkit-text-size-adjust: none;
+    -webkit-font-smoothing: antialiased;
 }
 
 ::-webkit-scrollbar {
     display: none;
 }
 
-main {
-    //? Big screen view
-    // max-width: 1920px;
-    // margin: 0 auto;
-
-    padding: 0 6rem;
-}
-
-@media (min-width: $breakpoint-tablet) {
-    [data-smoothscroll='container'] {
-        position: fixed;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100vh;
-    }
-
-    [data-smoothscroll='content'] {
-        position: absolute;
-        top: 0;
-        left: 0;
-        right: 0;
-        width: 100%;
-        height: auto;
-        will-change: transform;
-    }
-}
 
 canvas {
     pointer-events: none;
@@ -216,4 +191,12 @@ a {
     @media (max-width :$breakpoint-mobile) {
         display: none;
     }
+}
+
+//? Slider component class
+[data-slider] {
+    cursor: pointer;
+}
+.slider-on {
+    cursor: grab;
 }
