--- a/src/styles/sections/partials.scss
+++ b/src/styles/sections/partials.scss
@@ -9,7 +9,9 @@ $prealoder-padding: 6rem;
         width: 100%;
         height: 100%;
         padding: 6rem;
-        background-color: $color-primary;
+        background-color: $color-secondary;
+        color: $color-primary;
+
 
         @extend %flex-center;
 
@@ -28,7 +30,7 @@ $prealoder-padding: 6rem;
     position: absolute;
     display: flex;
     width: 100%;
-    height: 100vh;
+    height: 100%;
     top: 0;
     left: 0;
     pointer-events: none;
